# Text2SQL-Agent-Data-Platform

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  fix.txt  pyproject.toml  test.csv  test.txt
backend/: Dockerfile
benchmark/: benchmark_results.csv  benchmark_results.summary.json  gold_sql.csv  text2sql_results.csv  text2sql_results.summary.json
docs/: Text2sql_report.docx  slide.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: benchmark_router.py  benchmark_text2sql.py  ingest_universe.py  scheduler.py  universe.py
src/fintextsql/api/: main.py  schemas.py
src/fintextsql/core/: config.py  intent.py  llm_router.py  planner.py  policy.py  tickers.py
src/fintextsql/db/: models.py  session.py
src/fintextsql/ingestion/: yfinance_service.py
src/fintextsql/llm/: client.py
src/fintextsql/paths/company_info/: service.py
src/fintextsql/paths/general/: service.py
src/fintextsql/paths/news/: service.py
src/fintextsql/paths/simple_finance/: service.py
src/fintextsql/paths/visualization/: service.py
src/fintextsql/paths/web_search/: service.py
src/fintextsql/text2sql/: few_shot.py  knowledge.py  schema.py  service.py  sql_guard.py
tests/: test_agent_planner.py  test_chat_context.py  test_follow_up.py  test_intent_router.py  test_news_formatting.py  test_policy_guard.py  test_sql_guard.py  test_text2sql_explanation.py  test_visualization.py
